--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,20 +1,20 @@
 <header class="header" id="header">
   <div class="container header__container">
-      <a href="/" class="logo">
+      <a href="./#hero" class="logo">
           <span class="logo__icon"></span>
           <span class="logo__text">Zytra<span>Core</span></span>
       </a>
       <nav class="nav">
           <ul class="nav__list">
-              <li><a href="#hero" class="nav__link">Главная</a></li>
-              <li><a href="#about" class="nav__link">О платформе</a></li>
-              <li><a href="#features" class="nav__link">Преимущества</a></li>
-              <li><a href="#innovations" class="nav__link">Инновации</a></li>
-              <li><a href="#blog" class="nav__link">Блог</a></li>
+              <li><a href="./#hero" class="nav__link">Главная</a></li>
+              <li><a href="./#about" class="nav__link">О платформе</a></li>
+              <li><a href="./#features" class="nav__link">Преимущества</a></li>
+              <li><a href="./#innovations" class="nav__link">Инновации</a></li>
+              <li><a href="./#blog" class="nav__link">Блог</a></li>
           </ul>
       </nav>
       <div class="header__actions">
-          <a href="#contact" class="btn btn--primary">Начать</a>
+          <a href="./#contact" class="btn btn--primary">Начать</a>
           <button class="burger" aria-label="Menu">
               <span></span>
           </button>
@@ -25,12 +25,12 @@
   <div class="menu-overlay__container">
       <nav class="nav-mobile">
           <ul class="nav-mobile__list">
-              <li><a href="#hero" class="nav-mobile__link">Главная</a></li>
-              <li><a href="#about" class="nav-mobile__link">О платформе</a></li>
-              <li><a href="#features" class="nav-mobile__link">Преимущества</a></li>
-              <li><a href="#innovations" class="nav-mobile__link">Инновации</a></li>
-              <li><a href="#blog" class="nav-mobile__link">Блог</a></li>
-              <li><a href="#contact" class="nav-mobile__link">Начать</a></li>
+              <li><a href="./#hero" class="nav-mobile__link">Главная</a></li>
+              <li><a href="./#about" class="nav-mobile__link">О платформе</a></li>
+              <li><a href="./#features" class="nav-mobile__link">Преимущества</a></li>
+              <li><a href="./#innovations" class="nav-mobile__link">Инновации</a></li>
+              <li><a href="./#blog" class="nav-mobile__link">Блог</a></li>
+              <li><a href="./#contact" class="nav-mobile__link">Начать</a></li>
           </ul>
       </nav>
   </div>
