--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -187,7 +187,7 @@
                         <i data-lucide="mail"></i>
                         <div>
                             <h4>Напишите нам</h4>
-                            <a href="mailto:hello@zytra-core.blog">hello@zytra-core.blog</a>
+                            <a href="mailto:support@zytra-core.blog">support@zytra-core.blog</a>
                         </div>
                     </div>
                 </div>
