--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="container footer__container">
       <div class="footer__brand">
-          <a href="/" class="logo logo--footer">
+          <a href="./#hero" class="logo logo--footer">
               <span class="logo__text">Zytra<span>Core</span></span>
           </a>
           <p class="footer__tagline">Переосмыслите подход к развитию через AI-инструменты нового поколения.</p>
@@ -10,23 +10,23 @@
       <nav class="footer__nav">
           <h4 class="footer__title">Навигация</h4>
           <ul class="footer__list">
-              <li><a href="#hero">Главная</a></li>
-              <li><a href="#about">О платформе</a></li>
-              <li><a href="#features">Преимущества</a></li>
-              <li><a href="#innovations">Инновации</a></li>
-              <li><a href="#blog">Блог</a></li>
+              <li><a href="./#hero">Главная</a></li>
+              <li><a href="./#about">О платформе</a></li>
+              <li><a href="./#features">Преимущества</a></li>
+              <li><a href="./#innovations">Инновации</a></li>
+              <li><a href="./#blog">Блог</a></li>
           </ul>
       </nav>
 
       <nav class="footer__nav">
           <h4 class="footer__title">Юридическая информация</h4>
           <ul class="footer__list">
-              <li><a href="privacy.html">Privacy Policy</a></li>
-              <li><a href="cookies.html">Cookies Policy</a></li>
-              <li><a href="terms.html">Terms of Service</a></li>
-              <li><a href="return.html">Return Policy</a></li>
-              <li><a href="disclaimer.html">Disclaimer</a></li>
-              <li><a href="personal-data-policy.html">Personal Data</a></li>
+              <li><a href="./privacy.html">Privacy Policy</a></li>
+              <li><a href="./cookies.html">Cookies Policy</a></li>
+              <li><a href="./terms.html">Terms of Service</a></li>
+              <li><a href="./return.html">Return Policy</a></li>
+              <li><a href="./disclaimer.html">Disclaimer</a></li>
+              <li><a href="./personal-data-policy.html">Personal Data</a></li>
           </ul>
       </nav>
 
